# shelfpath

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  FEATURE.md  IMPLEMENTATION_PLAN.md  Justfile  MIGRATION_PLAN.md  PROJECT.md  README.md  TODO.md  app.py  compose.yaml  fly.toml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: check.yml  fly.yml  supabase.yml
booksequencer/: ai_series.py  auth.py  catalogue.py  clerk_auth.py  config.py  covers.py  email.py  invitations.py  library.py  observability.py  postgres_store.py  store.py
data.example/: state.yaml
data.example/series/: example-series.yaml
db/migrations/: 0001_initial.sql
docs/: SERIES_SOURCES.md
e2e/: Dockerfile  test_local_stack.py
migrations/: 001_initial_supabase.sql
scripts/: allow_ai_suggestion_user.py  cache_openlibrary_covers.py  deploy_database.sh  fetch_openlibrary_covers.py  import_catalogue_to_postgres.py  import_catalogue_to_supabase.py  link_supabase_project.sh  migrate_database.py  require_supabase_cli.sh  run_local_stack.sh  seed_local_supabase.py  take_design_screenshots.sh  test_postgres_migrations.sh  write_local_supabase_env.py
static/: site.webmanifest
supabase/: config.toml
supabase/migrations/: 20260704153000_grant_api_role_privileges.sql  20260704154500_allow_list_owner_select_before_membership.sql  20260711120000_share_lists_by_email.sql  (+9 more)
templates/: _book_ui.html  _clerk_auth_form.html  _email_auth_form.html  auth_callback.html  base.html  index.html  invitation_error.html  list_people.html  lists.html  login.html  series.html  shop.html  splash.html  suggest.html  suggest_detail.html
tests/: compose.yaml  postgres-migrations.compose.yaml  resend_stub.py  test_ai_series.py  test_app.py  test_catalogue.py  test_invitations.py  test_library.py  test_observability.py
