[project]
name = "shelfpath"
version = "0.1.0"
description = "Ordered book series and shared collecting list tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["httpx", "pyyaml", "starlette[full]", "uvicorn"]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 100

[tool.ruff.lint]
extend-select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[dependency-groups]
dev = ["ruff>=0.15.20"]

[tool.ruff.lint.isort]
known-first-party = ["booksequencer"]
